SERVER-15824 renameCollection should commit the destination coll drop